8-7-20:
- Added validation for timer entry
- Disable entries when timer is non-stopped