@@ -1,0 +1,7 @@
+import tkinter as tk
+from locals import *
+from settings import *
+
+
+
+class BooterClock(tk.Tk):
