@@ -1,0 +1,3 @@
+RUNNING = "running"
+STOPPED = "stopped"
+PAUSED = "paused"
