@@ -1,0 +1,9 @@
+TIMER_FG = 'light blue'
+TIMER_BG = 'black'
+
+STOPWATCH_FG = 'light blue'
+STOPWATCH_BG = 'black'
+
+TIMER_FONT = ('Consolas', 24, 'bold')
+
+STOPWATCH_FONT = ('Consolas', 24, 'bold')
